// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the checkbox component should tick it 1`] = `
.css-13azwyo,
[data-css-13azwyo] {
  position: relative;
}

.css-8wl8ax,
[data-css-8wl8ax] {
  border-radius: 3px;
  height: 25px;
  width: 25px;
  border: 3px solid lightGrey;
}

.css-1m9hm8a,
[data-css-1m9hm8a] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-h7582n,
[data-css-h7582n] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-4p3ux5,
[data-css-4p3ux5] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1vj6r0m,
[data-css-1vj6r0m] {
  position: absolute;
  top: 1px;
  left: 5px;
}

.css-uef4pa,
[data-css-uef4pa] {
  position: absolute;
  top: 0;
  left: 0;
}

.css-kvq3ck,
[data-css-kvq3ck] {
  padding-left: 15px;
  padding-right: 15px;
}

.css-18icfsk,
[data-css-18icfsk] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

<div
  data-css-1m9hm8a=""
  data-css-h7582n=""
>
  <div
    data-css-h7582n=""
  >
    <div
      data-css-13azwyo=""
      data-css-4p3ux5=""
      data-css-8wl8ax=""
    >
      <div
        data-css-1vj6r0m=""
        data-css-4p3ux5=""
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          data-css-4p3ux5=""
          size={14}
          style={
            Object {
              "fill": "rgba(255,255,255,0.3)",
              "height": 14,
              "stroke": false,
              "width": 14,
            }
          }
        />
      </div>
      <div
        data-css-4p3ux5=""
        data-css-uef4pa=""
      >
        <input
          checked={false}
          id="a"
          onChange={[Function]}
          style={
            Object {
              "height": "25px",
              "opacity": 0,
              "width": "25px",
            }
          }
          type="checkbox"
          value={false}
        />
      </div>
    </div>
  </div>
  <label
    htmlFor="a"
  >
    <div
      data-css-4p3ux5=""
      data-css-kvq3ck=""
    >
      <div
        data-css-18icfsk=""
        data-css-4p3ux5=""
      >
        I am a nice checkbox!
      </div>
    </div>
  </label>
</div>
`;

exports[`Test the checkbox component should tick it 2`] = `
.css-13azwyo,
[data-css-13azwyo] {
  position: relative;
}

.css-1m9hm8a,
[data-css-1m9hm8a] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-h7582n,
[data-css-h7582n] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-4p3ux5,
[data-css-4p3ux5] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1vj6r0m,
[data-css-1vj6r0m] {
  position: absolute;
  top: 1px;
  left: 5px;
}

.css-uef4pa,
[data-css-uef4pa] {
  position: absolute;
  top: 0;
  left: 0;
}

.css-kvq3ck,
[data-css-kvq3ck] {
  padding-left: 15px;
  padding-right: 15px;
}

.css-18icfsk,
[data-css-18icfsk] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-jn2bq2,
[data-css-jn2bq2] {
  border-radius: 3px;
  height: 25px;
  width: 25px;
  background-color: #3598db;
  border: 0;
}

<div
  data-css-1m9hm8a=""
  data-css-h7582n=""
>
  <div
    data-css-h7582n=""
  >
    <div
      data-css-13azwyo=""
      data-css-4p3ux5=""
      data-css-jn2bq2=""
    >
      <div
        data-css-1vj6r0m=""
        data-css-4p3ux5=""
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          data-css-4p3ux5=""
          size={14}
          style={
            Object {
              "fill": "rgba(255,255,255,1)",
              "height": 14,
              "stroke": false,
              "width": 14,
            }
          }
        />
      </div>
      <div
        data-css-4p3ux5=""
        data-css-uef4pa=""
      >
        <input
          checked={true}
          id="a"
          onChange={[Function]}
          style={
            Object {
              "height": "25px",
              "opacity": 0,
              "width": "25px",
            }
          }
          type="checkbox"
          value={true}
        />
      </div>
    </div>
  </div>
  <label
    htmlFor="a"
  >
    <div
      data-css-4p3ux5=""
      data-css-kvq3ck=""
    >
      <div
        data-css-18icfsk=""
        data-css-4p3ux5=""
      >
        I am a nice checkbox!
      </div>
    </div>
  </label>
</div>
`;

exports[`Test the checkbox component should work with children 1`] = `
.css-13azwyo,
[data-css-13azwyo] {
  position: relative;
}

.css-8wl8ax,
[data-css-8wl8ax] {
  border-radius: 3px;
  height: 25px;
  width: 25px;
  border: 3px solid lightGrey;
}

.css-h7582n,
[data-css-h7582n] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-4p3ux5,
[data-css-4p3ux5] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1vj6r0m,
[data-css-1vj6r0m] {
  position: absolute;
  top: 1px;
  left: 5px;
}

.css-uef4pa,
[data-css-uef4pa] {
  position: absolute;
  top: 0;
  left: 0;
}

.css-kvq3ck,
[data-css-kvq3ck] {
  padding-left: 15px;
  padding-right: 15px;
}

.css-18icfsk,
[data-css-18icfsk] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-l8kta8,
[data-css-l8kta8] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: darkMarco;
}

<div
  data-css-h7582n=""
  data-css-l8kta8=""
>
  <div
    data-css-h7582n=""
  >
    <div
      data-css-13azwyo=""
      data-css-4p3ux5=""
      data-css-8wl8ax=""
    >
      <div
        data-css-1vj6r0m=""
        data-css-4p3ux5=""
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          data-css-4p3ux5=""
          size={14}
          style={
            Object {
              "fill": "rgba(255,255,255,0.3)",
              "height": 14,
              "stroke": false,
              "width": 14,
            }
          }
        />
      </div>
      <div
        data-css-4p3ux5=""
        data-css-uef4pa=""
      >
        <input
          checked={false}
          id="a"
          onChange={[Function]}
          style={
            Object {
              "height": "25px",
              "opacity": 0,
              "width": "25px",
            }
          }
          type="checkbox"
          value={false}
        />
      </div>
    </div>
  </div>
  <label
    htmlFor="a"
  >
    <div
      data-css-4p3ux5=""
      data-css-kvq3ck=""
    >
      <div
        data-css-18icfsk=""
        data-css-4p3ux5=""
      >
        <h1>
          test
        </h1>
      </div>
    </div>
  </label>
</div>
`;
